--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "fastclick": "^1.0.6",
-    "babel-runtime": "^6.26.0",
-    "jsonp": "^0.2.1",
-    "vue-lazyload": "^1.1.3",
     "axios": "^0.16.2",
+    "babel-runtime": "^6.26.0",
     "better-scroll": "^0.1.15",
+    "create-keyframe-animation": "^0.1.0",
+    "fastclick": "^1.0.6",
+    "js-base64": "^2.3.2",
+    "jsonp": "^0.2.1",
+    "lyric-parser": "^1.0.1",
     "vue": "^2.4.2",
-    "vue-router": "^2.7.0"
+    "vue-lazyload": "^1.1.3",
+    "vue-router": "^2.7.0",
+    "vuex": "^2.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
