--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-runtime": "^6.26.0",
     "better-scroll": "^0.1.15",
     "create-keyframe-animation": "^0.1.0",
+    "express": "^4.16.4",
     "fastclick": "^1.0.6",
     "good-storage": "^1.0.1",
     "js-base64": "^2.3.2",
