--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue": "^2.4.2",
     "vue-lazyload": "^1.1.3",
     "vue-router": "^2.7.0",
-    "vuex": "^2.4.0"
+    "vuex": "^2.4.0",
+    "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
